@@ -1,3 +1,7 @@
+2020-12-30  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-05-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Add a 'last commit' badge
